# qtmvvmtoolkit

./: .env.sample  .gitlab-ci.yml  ExampleApp.py  Pipfile  README.md  dev.readme.md  docker-compose.yml  format-code.sh  model.py  program.py  pyproject.toml  requirements.txt  setup.py  testapp.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: App.py  AppShell.py  Program.py
app/pages/: MainPage.py  PageNav.py
app/pages/UI/: MainPage.ui  PageNav.ui  UIPageNav.py  ui_MainPage.py  ui_PageNav.py
mvvmkit/: bindableview.py  obervableobject.py  relaycommand.py
mvvmkit/navigations/: ButtonNav.py  StackWidgetRouter.py  router.py
mvvmkit/observables/: observableproperty.py
mvvmkit/views/: bindableview.py
pages/: MainPage.py
qtmvvmkit/navigations/: navigationmanager.py  navigator.py  route.py
qtmvvmkit/observables/objects/: observableobject.py
qtmvvmkit/observables/properties/: __init__.py  floatproperty.py  intproperty.py  listproperty.py  observableproperty.py  strproperty.py
qtmvvmkit/templates/pages/: NavigationPage.ui  ui_NavigationPage.py
qtmvvmkit/views/: bindableview.py
qtmvvmkit/widgets/: baseapp.py  bindableview.py  contentpage.py  navbutton.py  navigationpage.py
src/qtmvvmkit/navigations/: router.py
src/qtmvvmkit/widgets/: bindableobject.py  bindableview.py  navbutton.py
src/qtmvvmtoolkit/: commands.py  converters.py  inputs.py  messenger.py  navigation.py  navigations.py  objects.py  objects.pyi  py.typed
src/qtmvvmtoolkit/commands/: relaycommand.py
src/qtmvvmtoolkit/inputs/: __init__.py  _ocollections.py  _oproperties.py  _upgrading.py  bindableobject.py  computed_property.py  computedproperty.py  floatproperty.py  observable_collection.py  observable_property.py  observableobject.py  observableproperty.py  relayable_property.py  strproperty.py
src/qtmvvmtoolkit/navigations/: __init__.py  ishell.py  mainwindow_shell.py  navigationmanager.py  router.py  stackedwidget_shell.py
src/qtmvvmtoolkit/objects/: __init__.py  _bobject.py  _oobject.py  bindable_object.py  observable_object.py
src/qtmvvmtoolkit/observables/: __init__.py  bindableobject.py  boolproperty.py  intproperty.py  observableobject.py  observableproperty.py  relayableproperty.py  relaycommand.py
src/qtmvvmtoolkit/pyi_files/: objects.pyi
src/qtmvvmtoolkit/widgets/: __init__.py  baseapp.py  bindableobject.py  (+1 more)
tests/: App.py  AppShell.py  Program.py  app.py  appshell.py  base_example.py  context.py  program.py  sample_messenger.py  sample_observable_object.py  sample_test.py  simple_data_binding.py  testapp.py
tests/messages/: hellomessage.py
tests/pages/: MainPage.py  PageNav.py  homepage.py  pageuser.py
tests/viewmodels/: homevm.py  uservm.py
viewmodels/: userviewmodel.py
(+13 files in other folders)
