[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "qtmvvmtoolkit"
authors = [
    {name = "kvruntime", email = "email@email.com"},
]
description = "Description here..."
readme = "README.md"
requires-python = ">=3.7"
# keywords = ["one", "two"]
license = {file = "LICENCE"}

classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyqtdarktheme",
    'importlib-metadata; python_version<"3.8"',
    "pyqt6",
    "qtpy"
]
dynamic = ["version"]

[tool.setuptools.packages.find]
namespaces = true
where=["src"]

[tool.setuptools_scm]
version_scheme="post-release"


[tool.black]
line-lenght=79
include = '\.pyi?$'
exclude = '''
    /(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist
    )/
'''

[tool.isort]
line_length=79
known_first_party="qtmvvmtoolkit"
combine_as_imports=true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true