# [build-system]
# requires = ["setuptools", "setuptools-scm"]
# build-backend = "setuptools.build_meta"



[build-system] 
requires = ["pdm-backend"] 
build-backend = "pdm.backend"

[project]
name = "qtmvvmtoolkit"
authors = [
    {name = "kvruntime", email = "kvruntime@email.com"},
]
description = "Description here..."
readme = "README.md"
requires-python = ">=3.7"
# keywords = ["one", "two"]
license = {file = "LICENCE"}

classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyqtdarktheme",
    'importlib-metadata; python_version<"3.8"',
    "pyqt6",
    "qtpy"
]
dynamic = ["version"]

[tool.setuptools.packages.find]
namespaces = true
where=["src"]

# [tool.setuptools_scm]
# version_scheme="post-release"
[tool.pdm.version]
source = "scm"



